<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_label" />

        <LinearLayout
            android:layout_width="378dp"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/recipe_name"
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_name_hint" />

            <ImageView
                android:id="@+id/imageView"
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:paddingBottom="5dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:src="@color/white"/>
        </LinearLayout>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_label" />

        <EditText
            android:id="@+id/recipe_ingredient"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/recipe_ingredients_hint" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="378dp"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instruction_label" />

                <EditText
                    android:id="@+id/recipe_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine|textCapSentences"
                    android:hint="@string/recipe_instructions_hint"
                    android:maxLines="4"
                    android:minLines="1"
                    android:scrollbars="vertical"
                    android:scrollbarStyle="insideInset"
                    android:scrollbarSize="6dp"
                    android:scrollbarFadeDuration="500"
                    android:scrollbarDefaultDelayBeforeFade="300"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notes_label" />

                <EditText
                    android:id="@+id/recipe_note"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine|textCapSentences"
                    android:hint="@string/recipe_notes_hint"
                    android:maxLines="4"
                    android:minLines="1"
                    android:scrollbars="vertical"
                    android:scrollbarStyle="insideInset"
                    android:scrollbarSize="6dp"
                    android:scrollbarFadeDuration="500"
                    android:scrollbarDefaultDelayBeforeFade="300"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/recipe_recommend"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/recipe_recommend_label" />

            <Button
                android:id="@+id/recipe_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                tools:text="Wed Nov 14 11:56 EST 2018" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_shareRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_shareRecipe" />

        <Button
            android:id="@+id/btn_addRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_addRecipe" />

        <Button
            android:id="@+id/btn_deleteRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_deleteRecipe" />

    </LinearLayout>

</ScrollView>